c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/decl_wrong_closing_delim.c
/* Make sure a parameter list ends with a closing ) and not some other character;
 * this is a regression test for a bug in the reference implementation */

int foo(int x, int y} { return x + y; }

int main(void) { return 0;}